# carpediem-chatbot

./: AGENTS.md  README.md  package-lock.json  requirements.txt
api/: admin_routes.py  app.py  auth.py  models.py  pipeline.py
crawl/: crawl_collection_details.py  crawl_collections.py  product_db.py  static_crawling.py  static_crawling_details.py
data/: carpediem_chat.db  carpediem_products.db
interface/: app.py
processing/: chunking.py  embedding.py  retrieval.py
rag_eval/rag_eval/: evals.py  pyproject.toml  rag.py
rag_eval/rag_eval/data/: carpediem_chat.db  carpediem_products.db
rag_eval/rag_eval/evals/datasets/: test_dataset.csv
rag_eval/rag_eval/evals/experiments/: determined_sutherland.csv  magical_goldwasser.csv  wizardly_thompson.csv
rag_eval/rag_eval/evals/logs/: rag_run_20260530_143241_4940_2026-05-30T14-32-42-362416.json  rag_run_20260530_143343_5564_2026-05-30T14-33-43-780546.json  rag_run_20260530_143444_8212_2026-05-30T14-34-45-314370.json  rag_run_20260530_144658_9681_2026-05-30T14-46-58-423047.json  rag_run_20260530_144800_9169_2026-05-30T14-48-00-115866.json  rag_run_20260530_144901_1498_2026-05-30T14-49-01-399634.json  rag_run_20260530_145002_2351_2026-05-30T14-50-02-784086.json  rag_run_20260530_145104_7155_2026-05-30T14-51-04-748587.json
rag_eval/rag_eval/rag_eval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: demo_cli.py  giftset_products.py  merge_collection_product_details.py  merge_images_to_collections.py  upload_images_to_minio.py
src/: chatbot.py  graph_builder.py  graph_rag.py  log_utils.py  memory_store.py  (+3 more)
(+21 files in other folders)
